@@ -526,6 +526,7 @@ locale = {
 ["Don't eliminate Captain Lime before collecting the last crate!"]="Eliminiere Leutnant Limone nicht, bevor du die letzte Kiste eingesammelt hast!",
 ["Don't hit me, you fools!"] = "Nicht auf mich, ihr Idioten!", -- A_Space_Adventure:moon01
 ["Don't hit yourself!"] = "Triff nicht dich selbst!", -- Basic_Training_-_Bazooka
+["Don't touch the flames!"] = "Berühr nicht die Flammen!", -- ClimbHome
 ["Don't you dare harming our tribe!"] = "Wag es nicht, unserem Stamm wehzutun!", -- A_Classic_Fairytale:queen
 ["Double Kill!"]="Doppelmord!",
 ["Double kill!"] = "Zweierschlächter!", -- Mutant
@@ -2554,6 +2555,7 @@ locale = {
 ["Wario"] = "Wario", -- 
 ["Warming Up"] = "Aufwärmübungen", -- Basic_Training_-_Grenade
 ["Warning: Deletition Mode Active"]="Achtung: Löschmodus aktiv",
+["Warning: Fire cake detected"]="Achtung: Feuertorte gesichtet", -- ClimbHome
 ["Warning: Never ever leave the flying saucer while in water!"] = "Achtung: Verlasse niemals die fliegende Untertasse im Wasser!", -- Basic_Training_-_Flying_Saucer
 ["WARNING: Sabotage detected!"]="ACHTUNG: Sabotage erkannt!",
 ["Warrior"]="Krieger",
@@ -2599,6 +2601,7 @@ locale = {
 ["We have to protect the village!"]="Wir müssen das Dorf schützen!",
 ["We have to unite and defeat those cylergs!"]="Wir müssen uns zusammentun, und diese Cylergs besiegen!",
 ["Welcome Hog Solo, surprised to see me?"]="Hallo, Igel Einsam! Bist du überrascht, mich zu sehen?",
+["Welcome home! Please take a seat"] = "Willkommen zu Hause! Bitte nimm Platz", -- ClimbHome
 ["Welcome, Leaks A Lot!"]="Willkommen, Undichte Stelle!",
 ["Welcome to the Death Planet!"]="Willkommen auf dem Todesplaneten!",
 ["Welcome to the Desert Planet!"]="Willkommen auf dem Wüstenplaneten!",
