@@ -484,6 +484,7 @@ locale = {
 --      ["Don't eliminate Captain Lime before collecting the last crate!"] = "", -- A_Space_Adventure:fruit02
 --      ["Don't hit me, you fools!"] = "", -- A_Space_Adventure:moon01
 --      ["Don't hit yourself!"] = "", -- Basic_Training_-_Bazooka
+--      ["Don't touch the flames!"] = "", -- ClimbHome
 --      ["Don't you dare harming our tribe!"] = "", -- A_Classic_Fairytale:queen
 --      ["Double Kill!"] = "",
 --      ["Double kill!"] = "", -- Mutant
@@ -2388,6 +2389,7 @@ locale = {
 --      ["Wannabe Shoppsta"] = "", -- User_Mission_-_Rope_Knock_Challenge
 --      ["Wario"] = "", -- 
 --      ["Warming Up"] = "", -- Basic_Training_-_Grenade
+--      ["Warning: Fire cake detected"] = "", -- ClimbHome
 --      ["Warning: Never ever leave the flying saucer while in water!"] = "", -- Basic_Training_-_Flying_Saucer
 --      ["WARNING: Sabotage detected!"] = "", -- Continental_supplies
 --      ["Warrior"] = "", -- Battalion
@@ -2430,6 +2432,7 @@ locale = {
 --      ["We have to protect the village!"] = "", -- A_Classic_Fairytale:united
 --      ["We have to unite and defeat those cylergs!"] = "", -- A_Classic_Fairytale:enemy
 --      ["Welcome Hog Solo, surprised to see me?"] = "", -- A_Space_Adventure:death01
+--      ["Welcome home! Please take a seat"] = "", -- ClimbHome
 --      ["Welcome, Leaks A Lot!"] = "", -- A_Classic_Fairytale:journey
 --      ["Welcome to the Death Planet!"] = "", -- A_Space_Adventure:cosmos
 --      ["Welcome to the Desert Planet!"] = "", -- A_Space_Adventure:cosmos
